# bunker-convert

./: Cargo.toml  README.md  plan.md
.github/workflows/: ci.yml
examples/input/: hello.txt
examples/quickstart/: run.ps1  run.sh
recipes/: jpeg-to-webp.yaml  quickstart-webp.yaml  sample.yaml
scripts/: package.ps1  package.sh
sdk/node/: index.js  package.json
sdk/powershell/: BunkerConvert.psm1
sdk/python/: pyproject.toml
sdk/python/bunker_convert/: __init__.py
src/: benchmark.rs  lib.rs  lockfile.rs  main.rs  observability.rs  pipeline.rs  presets.rs  quality.rs  recipe.rs  scheduler.rs  security.rs  validation.rs
src/observability/: otel.rs  server.rs
src/stages/: mod.rs  video.rs
src/video/: container.rs  h264.rs  mod.rs
tests/: bench.rs  cli_quick_convert.rs  codec_controls.rs  pipeline.rs  presets.rs  quality_gates.rs  quickstart.rs  validation.rs  video_decode.rs
