[package]
name = "bunker-convert"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-opentelemetry = { version = "0.23", optional = true }
opentelemetry = { version = "0.22", features = ["trace"], optional = true }
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.15", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"], optional = true }
hyper = { version = "0.14", features = ["server", "http1", "http2", "runtime"], optional = true }
glob = "0.3"
sha2 = "0.10"
chrono = { version = "0.4", features = ["clock", "serde"] }
once_cell = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "bmp", "tiff", "gif", "ico", "pnm", "hdr", "dds", "avif"] }
webp = { version = "0.3", features = ["img"] }
cargo_metadata = "0.18"

[features]
default = []
otel = ["tracing-opentelemetry", "opentelemetry", "opentelemetry-otlp", "opentelemetry_sdk"]
metrics-server = ["tokio", "hyper"]
full = ["otel", "metrics-server"]

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
